Designed Login screen.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -2,6 +2,6 @@
 
     <string name="app_name">Super Pub</string>
 
-    <string name="login_with_facebook">LOG IN WITH FACEBOOK</string>
+    <string name="login_with_facebook">ENTRAR COM O FACEBOOK</string>
 
 </resources>
