Pubs screen! (DONE).

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -3,5 +3,6 @@
     <string name="app_name">Super Pub</string>
 
     <string name="login_with_facebook">ENTRAR COM O FACEBOOK</string>
+    <string name="no_rating">Sem nota</string>
 
 </resources>
