--- a/device/src/main/res/values/strings.xml
+++ b/device/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
+
     <string name="app_name">Device</string>
+
+    <string name="get_location_action">com.orogersilva.superpub.dublin.GET_LOCATION_ACTION</string>
+
 </resources>
