--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="location_permission_rationale_dialog_title">Allow Super Pub to use your device location?</string>
     <string name="login_with_facebook">LOG IN WITH FACEBOOK</string>
     <string name="no_rating">No rating</string>
+    <string name="slogan_label">Where is a pub near you? Ask the Super Pub!</string>
     <string name="yes">YES</string>
 
 </resources>
